--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div id="outer">
 <div id="inner">
-<header><h1>あなたのＨＰタイトル</h1>
+<header><h1>Website Title</h1>
 </header>
 <main>
 <h2>記事ページ見出し・大</h2>
