--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </header>
 <main>
 <h2>記事ページ見出し・大</h2>
-<p>文章あれこれ</p>
+<p>ここにテキストが入ります。</p>
 <h3>記事ページ見出し・中</h3>
-<p>文章あれこれ</p>
+<p>ここにテキストが入ります。</p>
 <h4>記事ページ見出し・小</h4>
-<p>文章あれこれ</p>
+<p>ここにテキストが入ります。</p>
 </main>
 <aside>
 <div class="title">menu</div>
